paths are now in config
also added a new method (econf) to $c that will expand config variables
in config values, so that $home/foo in config will expand as expected.

--- a/MakonFM/makonfm.yml
+++ b/MakonFM/makonfm.yml
@@ -1,3 +1,9 @@
 name: MakonFM
-audio_path:
-    mp3: /home/sixtease/Music/Makon/all/mp3/
+paths:
+    HTK: ''
+    sox: ''
+    audio:
+        mp3: $home/root/static/audio/mp3
+Util:
+    MatchChunk:
+        workpath: $home/temp/match_chunk/
