--- a/MakonFM/makonfm.yml
+++ b/MakonFM/makonfm.yml
@@ -3,7 +3,7 @@ paths:
     HTK: ''
     sox: ''
     audio:
-        mp3: $home/root/static/audio/mp3
+        mp3: $home/root/static/audio/
 Util:
     MatchChunk:
         workpath: $home/temp/match_chunk/
