Saving subtitles + debug
- local subtitles are now saved
- sub attributes like 'humanic' are now respected from server by front-end
- humanic set to subtitles by back-end
- no longer overwriting a following word
- #stem#pos now used to link to files
- TT now used for config expansion
- raised MatchChunk threshold to 500
- transcribed a part of 84-01B

--- a/MakonFM/makonfm.yml
+++ b/MakonFM/makonfm.yml
@@ -4,7 +4,11 @@ paths:
     HTK: ''
     sox: ''
     audio:
-        mp3: $home/root/static/audio/
+        mp3: '[% home %]/root/static/audio/'
 Util:
     MatchChunk:
-        workpath: $home/temp/match_chunk/
+        workpath: '[% home %]/temp/match_chunk/'
+subs:
+    jsonp_start: "jQuery(document).trigger('got_subtitles.MakonFM', { fn: '[% stem %]', data: "
+    jsonp_end:   "});"
+    path: '[% home %]/root/static/subs' 
