DB settings are now in config

--- a/MakonFM/makonfm.yml
+++ b/MakonFM/makonfm.yml
@@ -13,3 +13,6 @@ subs:
     jsonp_end:   "});"
     path: '[% home %]/root/static/subs' 
     gs_root: 'gs://karel-makon-sub/'
+db:
+    user: ''
+    password: ''
